# internal/dto/auth.go
@@ -10,6 +10,10 @@ type LoginRequest struct {
 	Password string `json:"password" validate:"required,min=8" example:"password213"`
 }
 
+type VerifyRequest struct {
+	Email string `json:"email"`
+	Code  string `json:"code"`
+}
 type TokenResponse struct {
 	Token string `json:"token"`
 }
