# internal/dto/base_response.go
@@ -1,5 +1,7 @@
 package dto
 
+import "time"
+
 type BaseResponse[T any] struct {
 	Status  string `json:"status" example:"success"`
 	Message string `json:"message" example:"operation done"`
@@ -18,7 +20,7 @@ type ErrorBaseResponse struct {
 	Message string `json:"message" example:"Error message"`
 }
 
-type SuccessRegisterBaseResponse struct {
+type SuccessBaseResponse struct {
 	Status  string `json:"status" example:"success"`
 	Message string `json:"message" example:"Success message"`
 }
@@ -27,4 +29,20 @@ type SuccessProfileBaseResponse struct {
 	Status  string          `json:"status" example:"success"`
 	Message string          `json:"message" example:"Success message"`
 	Data    ProfileResponse `json:"data"`
+}
+
+type ArticleBaseResponse struct {
+	Title       string                   `json:"title" example:"title example"`
+	Content     string                   `json:"content" example:"content example"`
+	PreviewURL  string                   `json:"preview_url" example:"https://example.com/images/article1.jpg"`
+	IsPublished bool                     `json:"is_published" example:"true"`
+	AuthorID    uint                     `json:"author_id" example:"1"`
+	CreatedAt   time.Time                `json:"created_at" example:"2025-05-31T10:30:00Z"`
+	Attachments []AttachmentBaseResponse `json:"attachments"`
+}
+
+type AttachmentBaseResponse struct {
+	URL      string `json:"url" example:"https://example.com/files/document.pdf"`
+	FileName string `json:"file_name" example:"document.pdf"`
+	FileSize int64  `json:"file_size" example:"1024"`
 }
